# Models-For-Jet-Tagging

./: README.md
L-GATr/: README.md  pyproject.toml  requirements.txt
L-GATr/docs/source/: api.rst  attention_backends.rst  conf.py  geometric_algebra.rst  index.rst  quickstart.rst  symmetry_breaking.rst
L-GATr/examples/: demo_conditional_lgatr.ipynb  demo_lgatr.ipynb
L-GATr/lgatr/: __init__.py
L-GATr/lgatr/interface/: __init__.py  axialvector.py  pseudoscalar.py  scalar.py  spurions.py  vector.py
L-GATr/lgatr/layers/: __init__.py  conditional_lgatr_block.py  dropout.py  layer_norm.py  lgatr_block.py  linear.py
L-GATr/lgatr/layers/attention/: attention.py  config.py  cross_attention.py  qkv.py  self_attention.py
L-GATr/lgatr/layers/mlp/: config.py  geometric_bilinears.py  mlp.py  nonlinearities.py
L-GATr/lgatr/nets/: __init__.py  conditional_lgatr.py  lgatr.py
L-GATr/lgatr/primitives/: __init__.py  attention.py  bilinear.py  config.py  dropout.py  invariants.py  linear.py  nonlinearities.py  normalization.py
L-GATr/lgatr/primitives/attention_backends/: __init__.py  default_attention.py  flex_attention.py  xformers_attention.py
L-GATr/lgatr/utils/: misc.py
L-GATr/tests/helpers/: __init__.py  clifford.py  equivariance.py  geometric_algebra.py
L-GATr/tests/lgatr/interface/: test_axialvector.py  test_pseudoscalar.py  test_scalar.py  test_spurions.py  test_vector.py
L-GATr/tests/lgatr/layers/: test_attention.py  test_conditional_lgatr_block.py  test_cross_attention.py  test_dropout.py  test_geometric_bilinears.py  test_lgatr_block.py  test_linear.py  (+3 more)
(+14 files in other folders)
